links to binary output folders are not correctly handled; the URL is suffixed with a File.separator ASSIGNED - fixes #688: Links to binary output folders are not correctly handled by JdtUtils.getClassPathUrls http://springide.org/project/ticket/688